# Streamlit-MLB-API

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.streamlit/: config.toml
data/: venues_cache.json
scripts/: record_fixtures.py  smoke.py  test_historical_roster.py
src/mlb_park/: __init__.py  app.py  chart.py  config.py  controller.py
tests/: conftest.py  test_calibration.py  test_config_season.py  test_geometry_integration.py  test_park.py  test_transform.py  test_verdict.py
tests/charts/: conftest.py  test_chart.py  test_chart_purity.py
tests/controller/: conftest.py  test_build_view.py  test_callbacks.py  test_helpers.py  test_purity.py  test_view_model.py
tests/fixtures/: README.md  feed_822998.json  feed_823241.json  feed_823243.json  feed_823563.json  feed_823568.json  gamelog_592450_2026.json  roster_147.json  team_stats_147_2026.json  team_stats_all_pitchers.json  team_stats_empty.json  team_stats_zero_hr_player.json  teams.json  venue_1.json  venue_12.json  venue_14.json  venue_15.json  venue_17.json  venue_19.json  venue_2.json  venue_22.json  venue_2392.json  venue_2394.json  venue_2395.json  venue_2529.json  venue_2602.json  venue_2680.json  venue_2681.json  venue_2889.json  venue_3.json  venue_31.json  venue_32.json  venue_3289.json  venue_3309.json  venue_4.json  (+8 more)
(+113 files in other folders)
