[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-park"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.55,<2.0",
    "requests>=2.32,<3.0",
    "plotly>=6.7,<7.0",
    "pandas>=2.2,<3.0",
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
